[package]
name = "compio-sync"
version = "0.0.1"
edition = "2021"
authors = ["Joseph Malicki <jmalicki@gmail.com>"]
description = "Async synchronization primitives for compio runtime"
license = "MIT"
repository = "https://github.com/jmalicki/compio-sync"
keywords = ["async", "synchronization", "semaphore", "compio", "concurrency"]
categories = ["asynchronous", "concurrency"]
readme = "README.md"

[dependencies]
# Compio runtime for async operations
compio = { version = "0.16", features = ["macros"] }

[dev-dependencies]
compio = { version = "0.16", features = ["macros", "time"] }

[lib]
name = "compio_sync"
path = "src/lib.rs"

